Leker meg med CSS style

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,14 +1,35 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>
 			Highscore - tabell
 		</title>
+		<style>
+			
+			h1 {
+				margin: auto;
+				width: 80%;
+				border: 4px groove #0066cc;
+				padding: 10;
+			}
+
+		</style>
 	</head>
 
-	<body>
-		<h1> HIGHSCORE-liste</h1>
-		<h2> Sentence Crushers</h2>
-		<h3> Level 1 </h3> 
+	<body style="margin: 50px">
+		<h1 style="margin: auto; width: 60%"> 
+		             HIGHSCORE-liste</h1>
+		<h2 style="margin: auto; width: 60%"> 
+		             Sentence Crushers</h2>
+		<h3>
+			<ul>
+				<li> Level 1 </li>
+				<li> Level 2 </li>
+				<li> Level 3 </li>
+				<li> Level 4 </li>
+			</ul>
+		</h3> 
+		<!-- needs to be a variable-->
     	<ol>
     		<li> Jonas 147p - Time: 2016-03-17 18:32:45 </li>
     		<li> Jonas 138p - Time: 2016-03-17 18:31:40 </li>
@@ -20,3 +41,4 @@
 </html>
 
 
+<!--session 18:20 
