Things start to get interesting

--- a/Website/index.html
+++ b/Website/index.html
@@ -4,25 +4,39 @@
 		<title>
 			Highscore - tabell
 		</title>
+
+		<!-- 
+			if margin has 4 values
+				Margin = Top right bottom left
+			if margin has 3 values
+				Margin = Top right-left bottom 
+			if margin has 2 values
+			    Margin = Top-bottom righ-left-->
 		<style>
 			
 			h1 {
 				margin: auto;
+				width: 100%;
+				border: 4pt groove #0066cc;
+				padding: 5pt 10pt;
+			}
+
+			h2 {
+				margin: 30pt 50pt;
 				width: 80%;
-				border: 4px groove #0066cc;
-				padding: 10;
+				border: 2pt solid red;
+				padding: 5pt;
 			}
 
 		</style>
+
 	</head>
 
 	<body style="margin: 50px">
-		<h1 style="margin: auto; width: 60%"> 
-		             HIGHSCORE-liste</h1>
-		<h2 style="margin: auto; width: 60%"> 
-		             Sentence Crushers</h2>
+		<h1> HIGHSCORE-liste</h1>
+		<h2> Sentence Crushers</h2>
 		<h3>
-			<ul>
+			<ul style="border: 2pt solid red; padding: 10pt 20pt">
 				<li> Level 1 </li>
 				<li> Level 2 </li>
 				<li> Level 3 </li>
@@ -30,7 +44,7 @@
 			</ul>
 		</h3> 
 		<!-- needs to be a variable-->
-    	<ol>
+    	<ol style="border: 2pt solid red; padding: 10pt 20pt">
     		<li> Jonas 147p - Time: 2016-03-17 18:32:45 </li>
     		<li> Jonas 138p - Time: 2016-03-17 18:31:40 </li>
     		<li> Jonas 121p - Time: 2016-03-17 18:30:11 </li>
