Made links between 2 html documents

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>
-			Highscore - tabell
-		</title>
-
-		<!-- 
-			if margin has 4 values
-				Margin = Top right bottom left
-			if margin has 3 values
-				Margin = Top right-left bottom 
-			if margin has 2 values
-			    Margin = Top-bottom righ-left-->
+		<title> Highscore - tabell </title>
+		
 		<style>
-			
-			h1 {
-				margin: auto;
-				width: 100%;
-				border: 4pt groove #0066cc;
-				padding: 5pt 10pt;
-			}
+			body {
+				margin: 50pt;
+				font-family: Arial, Helvetica, sans-serif;
+				text-align: center;
+				background-color: #d0e4fe;
+		    }
 
-			h2 {
-				margin: 30pt 50pt;
-				width: 80%;
-				border: 2pt solid red;
-				padding: 5pt;
-			}
+			ul#menu li {
+    				display:inline;
+    				padding: 50pt;
+                }	
 
+            h1 {
+            	
+            	padding: 25pt;
+            	background-color: #9966ff;
+            }
 		</style>
-
 	</head>
 
-	<body style="margin: 50px">
+	<body>
+
 		<h1> HIGHSCORE-liste</h1>
-		<h2> Sentence Crushers</h2>
-		<h3>
-			<ul style="border: 2pt solid red; padding: 10pt 20pt">
-				<li> Level 1 </li>
-				<li> Level 2 </li>
-				<li> Level 3 </li>
-				<li> Level 4 </li>
-			</ul>
-		</h3> 
-		<!-- needs to be a variable-->
-    	<ol style="border: 2pt solid red; padding: 10pt 20pt">
+		<h2>
+		<ul id="menu">
+			<li> Sentence crushers</li>
+			<li><a href="callOfduty.html"> Call of duty</a></li>
+		</ul>
+		</h2>
+		
+		<ul>
+			<li> Level 1 </li>
+			<li> Level 2 </li>
+			<li> Level 3 </li>
+			<li> Level 4 </li>
+		</ul> 
+		
+    	<ol >
     		<li> Jonas 147p - Time: 2016-03-17 18:32:45 </li>
     		<li> Jonas 138p - Time: 2016-03-17 18:31:40 </li>
     		<li> Jonas 121p - Time: 2016-03-17 18:30:11 </li>
