Update website: Fått på plass et OK design.
- Oppretta filer for Level1, level2, level3 og Level4.

--- a/Website/Level4.html
+++ b/Website/Level4.html
@@ -16,22 +16,21 @@
 
 
 	<div class="menu">
-		<h2><a href="#"> LEVEL 1 </a> </h2>
+		<h2><a href="index.html"> LEVEL 1 </a> </h2>
 		<h2><a href="Level2.html"> LEVEL 2</a> </h2>
 		<h2><a href="Level3.html"> LEVEL 3</a> </h2>
-		<h2><a href="Level4.html"> LEVEL 4</a> </h2>
+		<h2><a href="#"> LEVEL 4</a> </h2>
 	</div>
 
+	<p>
+		<i>"Low-level programming is good for the programmer's soul. - John Carmack" </i>
+	</p>
+    		
 
-	<p> <i>""Object-oriented programming is an exceptionally bad idea
-                  which could only have originated in California. - Edsger Dijkstra"" </i></p>
-	<ol>
-		<li> 1.  Jonas 147p - Time: 2016-03-17 18:32:45 </li>
-		<li> 2. Jonas 138p - Time: 2016-03-17 18:31:40 </li>
-		<li> 3. Jonas 121p - Time: 2016-03-17 18:30:11 </li>
-		<li> 4. Jonas 119p - Time: 2016-03-17 18:29:19 </li>
-	</ol>
-
+   <ol>
+		<li> ------- NO DATA ------- </li>
+		
+	   </ol>
 </body>
 
 </html>
