Played around with display: flex, flex-wrap: wrap;       and justify-content: center;

--- a/Website/Level3.html
+++ b/Website/Level3.html
@@ -26,11 +26,12 @@
                       is an extremely creative profession. It's logic-based creativity.
                       - John Romero"</i></p>
 
-
+     <div class="lista">
      <ol>
 		<li> ------- NO DATA ------- </li>
 		
 	   </ol>
+	 </div>
 </body>
 
 </html>
