--- a/Website/index.html
+++ b/Website/index.html
@@ -25,12 +25,15 @@
 
 	<p> <i>""Object-oriented programming is an exceptionally bad idea
                   which could only have originated in California. - Edsger Dijkstra"" </i></p>
-	<ol>
-		<li> 1.  Jonas 147p - Time: 2016-03-17 18:32:45 </li>
-		<li> 2. Jonas 138p - Time: 2016-03-17 18:31:40 </li>
-		<li> 3. Jonas 121p - Time: 2016-03-17 18:30:11 </li>
-		<li> 4. Jonas 119p - Time: 2016-03-17 18:29:19 </li>
+
+    <div class="lista">
+    <ol>
+		<li>Jonas 147p - Time: 2016-03-17 18:32:45 </li>
+		<li>Jonas 138p - Time: 2016-03-17 18:31:40 </li>
+		<li>Jonas 121p - Time: 2016-03-17 18:30:11 </li>
+		<li>Jonas 119p - Time: 2016-03-17 18:29:19 </li>
 	</ol>
+	</div>
 
 </body>
 
