--- a/Website/Level2.html
+++ b/Website/Level2.html
@@ -25,10 +25,13 @@
 	<p> <i> "Good, better, best. Never let it rest. 'Til your good is better
                       and your better is best."</i> </p>
 
+      <div class="lista">
        <ol>
 		<li> ------- NO DATA ------- </li>
 		
 	   </ol>
+
+	 </div>
 </body>
 
 </html>
