Knapper som beveger seg!  :)
Lagt til position: relative;

og

a:active {
	top: 3pt;
}

--- a/Website/Level3.html
+++ b/Website/Level3.html
@@ -28,7 +28,7 @@
 
      <div class="lista">
      <ol>
-		<li> ------- NO DATA ------- </li>
+		<li> ------- NO DATA ------</li>
 		
 	   </ol>
 	 </div>
