Cleaned up a bit.

--- a/Website/Level2.html
+++ b/Website/Level2.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-		
-	<div class="overskrift">
-		<h1> HIGHSCORE - SENTENCE CRUSHERS </h1>
+<div id="wrapper">
+
+	<div class="header">
+		<h1> HIGHSCORE<br /> SENTENCE CRUSHERS </h1>
+
 	</div>
 
 
 	<div class="menu">
-		<h2><a href="index.html"> LEVEL 1 </a> </h2>
-		<h2><a href="#"> LEVEL 2</a> </h2>
-		<h2><a href="Level3.html"> LEVEL 3</a> </h2>
-		<h2><a href="Level4.html"> LEVEL 4</a> </h2>
+		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="#"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="Level3.html"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="Level4.html"> LEVEL 4</a></div>
 	</div>
 
-	<p> <i> "Good, better, best. Never let it rest. 'Til your good is better
+	<p> <i> "Good, better, best. Never let it rest. <br />'Til your good is better
                       and your better is best."</i> </p>
 
       <div class="lista">
@@ -32,6 +34,7 @@
 	   </ol>
 
 	 </div>
+</div>
 </body>
 
 </html>
