--- a/Website/Level3.html
+++ b/Website/Level3.html
@@ -9,22 +9,23 @@
 </head>
 
 <body>
-		
-	<div class="overskrift">
-		<h1> HIGHSCORE - SENTENCE CRUSHERS </h1>
+<div id="wrapper">
+
+	<div class="header">
+		<h1> HIGHSCORE<br /> SENTENCE CRUSHERS </h1>
+
 	</div>
 
 
 	<div class="menu">
-		<h2><a href="index.html"> LEVEL 1 </a> </h2>
-		<h2><a href="Level2.html"> LEVEL 2</a> </h2>
-		<h2><a href="#"> LEVEL 3</a> </h2>
-		<h2><a href="Level4.html"> LEVEL 4</a> </h2>
+		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="Level2.html"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="#"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="Level4.html"> LEVEL 4</a></div>
 	</div>
 
-	<p><i>"You might not think that programmers are artists, but programming
-                      is an extremely creative profession. It's logic-based creativity.
-                      - John Romero"</i></p>
+	<p><i>"You might not think that programmers are artists, <br /> but programming is an extremely creative profession. <br /> It's logic-based creativity."
+                      - John Romero</i></p>
 
      <div class="lista">
      <ol>
@@ -32,6 +33,7 @@
 		
 	   </ol>
 	 </div>
+</div>
 </body>
 
 </html>
