--- a/Website/Level4.html
+++ b/Website/Level4.html
@@ -9,21 +9,23 @@
 </head>
 
 <body>
-		
-	<div class="overskrift">
-		<h1> HIGHSCORE - SENTENCE CRUSHERS </h1>
+<div id="wrapper">
+
+	<div class="header">
+		<h1> HIGHSCORE<br /> SENTENCE CRUSHERS </h1>
+
 	</div>
 
 
 	<div class="menu">
-		<h2><a href="index.html"> LEVEL 1 </a> </h2>
-		<h2><a href="Level2.html"> LEVEL 2</a> </h2>
-		<h2><a href="Level3.html"> LEVEL 3</a> </h2>
-		<h2><a href="#"> LEVEL 4</a> </h2>
+		<div class="menu_items"><a href="index.html"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="Level2.html"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="Level3.html"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="#"> LEVEL 4</a></div>
 	</div>
 
 	<p>
-		<i>"Low-level programming is good for the programmer's soul. - John Carmack" </i>
+		<i>"Low-level programming is good for the programmer's soul."<br /> - John Carmack </i>
 	</p>
     		
     <div class="lista">
@@ -32,6 +34,7 @@
 		
 	   </ol>
 	</div>
+</div>
 </body>
 
 </html>
