--- a/Website/index.html
+++ b/Website/index.html
@@ -9,22 +9,23 @@
 </head>
 
 <body>
-		
-	<div class="overskrift">
-		<h1> HIGHSCORE - SENTENCE CRUSHERS </h1>
+<div id="wrapper">
+
+	<div class="header">
+		<h1> HIGHSCORE<br /> SENTENCE CRUSHERS </h1>
 	</div>
 
 
 	<div class="menu">
-		<h2><a href="#"> LEVEL 1 </a> </h2>
-		<h2><a href="Level2.html"> LEVEL 2</a> </h2>
-		<h2><a href="Level3.html"> LEVEL 3</a> </h2>
-		<h2><a href="Level4.html"> LEVEL 4</a> </h2>
+		<div class="menu_items"><a href="#"> LEVEL 1 </a></div>
+		<div class="menu_items"><a href="Level2.html"> LEVEL 2</a></div>
+		<div class="menu_items"><a href="Level3.html"> LEVEL 3</a></div>
+		<div class="menu_items"><a href="Level4.html"> LEVEL 4</a></div>
 	</div>
 
 
-	<p> <i>""Object-oriented programming is an exceptionally bad idea
-                  which could only have originated in California. - Edsger Dijkstra"" </i></p>
+	<p> <i>"Object-oriented programming is an exceptionally bad idea, <br />
+                  which could only have originated in California." - Edsger Dijkstra </i></p>
 
     <div class="lista">
     <ol>
@@ -34,7 +35,7 @@
 		<li>Jonas 119p - Time: 2016-03-17 18:29:19 </li>
 	</ol>
 	</div>
-
+</div>
 </body>
 
 </html>
